Melhorando a experiência do usuário na tela de gestão de serviços

--- a/prjinfox/src/main/java/com/mycompany/infox/telas/TelaOs.form
+++ b/prjinfox/src/main/java/com/mycompany/infox/telas/TelaOs.form
@@ -274,14 +274,15 @@
     <Component class="javax.swing.JComboBox" name="cboOsSituacao">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="7">
-            <StringItem index="0" value="Na bancada"/>
-            <StringItem index="1" value="Entrega OK"/>
-            <StringItem index="2" value="Or&#xe7;amento REPROVADO"/>
-            <StringItem index="3" value="Aguardando Aprova&#xe7;&#xe3;o"/>
-            <StringItem index="4" value="Aguardando pe&#xe7;as"/>
-            <StringItem index="5" value="Abandonado pelo cliente"/>
-            <StringItem index="6" value="Retornou"/>
+          <StringArray count="8">
+            <StringItem index="0" value=" "/>
+            <StringItem index="1" value="Na bancada"/>
+            <StringItem index="2" value="Entrega OK"/>
+            <StringItem index="3" value="Or&#xe7;amento REPROVADO"/>
+            <StringItem index="4" value="Aguardando Aprova&#xe7;&#xe3;o"/>
+            <StringItem index="5" value="Aguardando pe&#xe7;as"/>
+            <StringItem index="6" value="Abandonado pelo cliente"/>
+            <StringItem index="7" value="Retornou"/>
           </StringArray>
         </Property>
       </Properties>
@@ -470,6 +471,7 @@
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Hand Cursor"/>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
         <Property name="horizontalTextPosition" type="int" value="0"/>
       </Properties>
       <Events>
@@ -485,6 +487,7 @@
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Hand Cursor"/>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
         <Property name="horizontalTextPosition" type="int" value="0"/>
       </Properties>
       <Events>
@@ -500,6 +503,7 @@
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
           <Color id="Hand Cursor"/>
         </Property>
+        <Property name="enabled" type="boolean" value="false"/>
         <Property name="horizontalTextPosition" type="int" value="0"/>
       </Properties>
     </Component>
