Impressão de uma OS específica

--- a/prjinfox/src/main/java/com/mycompany/infox/telas/TelaOs.form
+++ b/prjinfox/src/main/java/com/mycompany/infox/telas/TelaOs.form
@@ -506,6 +506,9 @@
         <Property name="enabled" type="boolean" value="false"/>
         <Property name="horizontalTextPosition" type="int" value="0"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnImprimirOsActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
